# IAISO

./: .gitignore  LICENSE  README.md  requirements.txt
IAIso-v5.0/: MIGRATION.md  NOTICE.md  README.md  known-limitations.md
IAIso-v5.0-Final-Definitive/: README.md  index.html  mkdocs.yml
IAIso-v5.0-Final-Definitive/api/: openapi.yaml
IAIso-v5.0-Final-Definitive/scripts/: simulate_pressure.py
IAIso-v5.0-Final-Definitive/templates/: escalation.template  inv-1.template
IAIso-v5.0/agents/: iaiso-compliance-evidence-agent.json  iaiso-foundation-team-lead-agent.json  iaiso-orchestrator-onboarding-agent.json  iaiso-platform-rollout-agent.json  iaiso-port-team-agent.json  iaiso-production-deployment-agent.json  iaiso-redteam-incident-agent.json  iaiso-runtime-conduct-agent.json
IAIso-v5.0/core/: CHANGELOG.md  README.md  pyproject.toml
IAIso-v5.0/core/iaiso-python/: CHANGELOG.md  README.md  pyproject.toml
IAIso-v5.0/core/iaiso-python/bench/: README.md  results.json
IAIso-v5.0/core/iaiso-python/deploy/: README.md
IAIso-v5.0/core/iaiso-python/deploy/docker/: Dockerfile  docker-compose.yml
IAIso-v5.0/core/iaiso-python/deploy/helm/: Chart.yaml  values.yaml
IAIso-v5.0/core/iaiso-python/deploy/helm/templates/: _helpers.tpl  supporting.yaml
IAIso-v5.0/core/iaiso-python/deploy/terraform/: main.tf
IAIso-v5.0/core/iaiso-python/deploy/terraform/example/: main.tf
IAIso-v5.0/core/iaiso-python/docs/: BACKWARDS_COMPATIBILITY.md  getting-started.md  self-hosted.md
IAIso-v5.0/core/iaiso-python/evals/baseline/: steps.jsonl  summary.csv
IAIso-v5.0/core/iaiso-python/examples/: self_hosted_vllm.py  simulated_agent.py
IAIso-v5.0/core/iaiso-python/iaiso/: __init__.py
IAIso-v5.0/core/iaiso-python/iaiso.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
IAIso-v5.0/core/iaiso-python/iaiso/audit/: __init__.py  datadog.py  elastic.py  loki.py  newrelic.py  sumologic.py  webhook.py
IAIso-v5.0/core/iaiso-python/iaiso/bench/: __init__.py  microbench.py
IAIso-v5.0/core/iaiso-python/iaiso/calibration/: __init__.py
IAIso-v5.0/core/iaiso-python/iaiso/cli/: __init__.py
IAIso-v5.0/core/iaiso-python/iaiso/conformance/: __init__.py  __main__.py  _consent.py  _events.py  _policy.py
IAIso-v5.0/core/iaiso-python/iaiso/consent/: __init__.py  backends.py
IAIso-v5.0/core/iaiso-python/iaiso/coordination/: __init__.py  redis.py
IAIso-v5.0/core/iaiso-python/iaiso/core/: __init__.py  engine.py  execution.py
IAIso-v5.0/core/iaiso-python/iaiso/evaluation/: __init__.py  __main__.py
IAIso-v5.0/core/iaiso-python/iaiso/metrics/: __init__.py
IAIso-v5.0/core/iaiso-python/iaiso/middleware/: anthropic.py  cohere.py  gemini.py  langchain.py  litellm.py  mistral.py  openai.py
IAIso-v5.0/core/iaiso-python/iaiso/observability/: tracing.py
IAIso-v5.0/core/iaiso-python/iaiso/reliability/: __init__.py
IAIso-v5.0/core/iaiso-python/scripts/: record_gaia.py  record_generic.py  run_calibration_study.py
IAIso-v5.0/core/iaiso-python/tests/: test_audit.py  test_calibration.py  test_cli.py  test_conformance.py  test_consent_backends.py  test_coordination.py  test_engine.py  test_evaluation.py  test_execution.py  test_metrics.py  test_middleware_litellm.py  test_middleware_new.py  test_policy.py  test_redis_coordinator.py  test_siem_sinks.py  test_tracing.py
IAIso-v5.0/core/iaiso-rust/: .gitignore  Cargo.toml  README.md
IAIso-v5.0/core/iaiso-rust/cmd/iaiso/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/cmd/iaiso-conformance/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/cmd/iaiso-conformance/src/: main.rs
IAIso-v5.0/core/iaiso-rust/cmd/iaiso/src/: main.rs
IAIso-v5.0/core/iaiso-rust/crates/audit/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/audit/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/crates/cli/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/cli/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/crates/conformance/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/conformance/src/: consent_runner.rs  events_runner.rs  lib.rs  policy_runner.rs
IAIso-v5.0/core/iaiso-rust/crates/consent/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/consent/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/crates/coordination/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/coordination/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/crates/core/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/core/src/: config.rs  engine.rs  execution.rs  lib.rs  types.rs
IAIso-v5.0/core/iaiso-rust/crates/identity/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/identity/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/crates/metrics/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/metrics/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/crates/middleware/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/middleware/src/: anthropic.rs  bedrock.rs  cohere.rs  gemini.rs  lib.rs  litellm.rs  mistral.rs  openai.rs
IAIso-v5.0/core/iaiso-rust/crates/middleware/tests/: anthropic_test.rs
IAIso-v5.0/core/iaiso-rust/crates/observability/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/observability/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/crates/policy/: Cargo.toml
IAIso-v5.0/core/iaiso-rust/crates/policy/src/: lib.rs
IAIso-v5.0/core/iaiso-rust/spec/consent/: claims.schema.json  vectors.json
IAIso-v5.0/core/iaiso-rust/spec/events/: envelope.schema.json  payloads.schema.json
IAIso-v5.0/personas/: iaiso-audit-engineer.json  iaiso-calibration-engineer.json  iaiso-compliance-officer.json  iaiso-coordination-specialist.json  iaiso-deployment-engineer.json  iaiso-diagnostics-engineer.json  iaiso-foundation-mentor.json  iaiso-identity-consent-engineer.json  iaiso-llm-middleware-engineer.json  iaiso-orchestrator-integrator.json  iaiso-platform-integrator.json  iaiso-port-engineer.json  iaiso-prompt-author.json  iaiso-redteam-specialist.json  iaiso-runtime-engineer.json  iaiso-spec-architect.json
IAIso-v5.0/scripts/: iaiso-validate.py
IAIso-v5.0/skills/: CONVENTIONS.md  INDEX.md  INTEGRATION.md  README.md
IAIso-v5.0/templates/: consent-enforcement.template
enhancements/: plugins-sdks.md
enhancements-old/: outstanding ports.md
(+1107 files in other folders)
