[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/consent",
    "crates/audit",
    "crates/policy",
    "crates/coordination",
    "crates/middleware",
    "crates/identity",
    "crates/metrics",
    "crates/observability",
    "crates/conformance",
    "crates/cli",
    "cmd/iaiso",
    "cmd/iaiso-conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SmartTasksOrg/IAISO"
authors = ["IAIso Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Standard
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
parking_lot = "0.12"

# Time + crypto
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# JWT
jsonwebtoken = "8"
base64 = "0.22"

# HTTP — blocking client lets us keep Sink::emit sync
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

# Internal cross-crate references
iaiso-core = { path = "crates/core", version = "0.1.0" }
iaiso-consent = { path = "crates/consent", version = "0.1.0" }
iaiso-audit = { path = "crates/audit", version = "0.1.0" }
iaiso-policy = { path = "crates/policy", version = "0.1.0" }
iaiso-coordination = { path = "crates/coordination", version = "0.1.0" }
iaiso-middleware = { path = "crates/middleware", version = "0.1.0" }
iaiso-identity = { path = "crates/identity", version = "0.1.0" }
iaiso-metrics = { path = "crates/metrics", version = "0.1.0" }
iaiso-observability = { path = "crates/observability", version = "0.1.0" }
iaiso-conformance = { path = "crates/conformance", version = "0.1.0" }
iaiso-cli = { path = "crates/cli", version = "0.1.0" }
