[package]
name = "iaiso-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "IAIso conformance vector runner"

[dependencies]
iaiso-core = { workspace = true }
iaiso-audit = { workspace = true }
iaiso-consent = { workspace = true }
iaiso-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
