[package]
name = "iaiso-coordination"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "IAIso cross-execution pressure coordination (in-memory + Redis)"

[dependencies]
iaiso-audit = { workspace = true }
iaiso-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
