[package]
name = "iaiso-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "IAIso Prometheus metrics sink (structurally typed)"

[dependencies]
iaiso-audit = { workspace = true }
