[package]
name = "iaiso-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "IAIso LLM provider middleware (Anthropic, OpenAI, Gemini, Bedrock, Mistral, Cohere, LiteLLM)"

[dependencies]
iaiso-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
iaiso-audit = { workspace = true }
