[package]
name = "iaiso-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "IAIso OpenTelemetry tracing sink (structurally typed)"

[dependencies]
iaiso-audit = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
